# hair-style-ai-schemas

./: .gitignore  LICENSE  __init__.py  generate.py  pyproject.toml  requirements.txt  setup.py
hair_style_ai_schemas/: __init__.py  api_gateway.py  auth.py  generate.py  storage_client.py
hair_style_ai_schemas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
schemas/: __init__.py
