[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name="schemas-hair-style-ai"
version = "0.0.1"
authors = [
    {name="pashudzu", email="pashudzu@gmail.com"},
]
description = "Library of schemas for project hair-style-ai"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]